<resources>
    <string name="app_name">Angels and Saints</string>
    <string name="creed">I believe in God, the Father Almighty, Creator of Heaven and earth; and
        in Jesus Christ, His only Son, Our Lord, Who was conceived by the Holy Spirit, born of the Virgin Mary, suffered
        under Pontius Pilate, was crucified; died, and was buried. He descended into Hell; the third day He arose again
        from the dead; He ascended into Heaven, sitteth at the right hand of God, the Father Almighty; from thence He
        shall come to judge the living and the dead. I believe in the Holy Spirit, the holy Catholic Church, the
        communion of saints, the forgiveness of sins, the resurrection of the body, and the life everlasting. \n\nAmen.
        \n\n\n

    </string>
    <string name="apostles">Apostles\' Creed</string>
    <string name="god_the_father">Lords Prayer</string>
    <string name="our_father">Our Father who art in heaven, hallowed be thy name. Thy kingdom come.
        Thy will be done on earth as it is in heaven. \n\nGive us this day our daily bread, and forgive us our
        trespasses,
        as we forgive those who trespass against us, and lead us not into temptation, but deliver us from evil.

        For thine is the kingdom, and the power, and the glory, for ever and ever.
        \n\n
        Amen.\n\n\n


    </string>
    <string name="our_father_mar">
        आमच्या स्वर्गीयबापा\n\n

        आमच्या स्वर्गीय बापा, तुझे नाव पवित्र मानले जावो, तुझे राज्य येवो. जसे स्वर्गात तसे पृथ्वीवरही तुझ्या
        इच्छेप्रमाणे होवो. \n\nआमची दररोजची भाकर आज आम्हाला दे. जशी आम्ही आमचा अपराध करणाऱ्यांना क्षमा करतो तशी तू
        आमच्या अपराधांची क्षमा कर आणि आम्हाला मोहात पडू देऊ नकोस पण वाईटापासून आम्हाला सोडव. \n\nआमेन.
    </string>
    <string name="hail_mary">Hail Mary</string>
    <string name="hailmary">Hail Mary, full of grace. Our Lord is with you. Blessed are you among women,
        and blessed is the fruit of your womb, Jesus.\n \nHoly Mary, Mother of God pray for us sinners, now and at the
        hour of our death. \n \nAmen


    </string>
    <string name="hail_mar">
        नमो कृपापूर्ण मरिये, प्रभू तुझ्या ठायी आहे. धन्य तू स्त्रियांमध्ये धन्य तुझ्या उदराचे फळ येशू.\n\n
        हे पवित्र मरिये, देवाचे माते, आम्हा पाप्यांसाठी आता आणि आमच्या मरणाच्या वेळी विनंती कर, \n\nआमेन.
    </string>
    <string name="holy_queen">Hail holy queen</string>
    <string name="hail_queen">Hail, holy Queen, Mother of Mercy! Our life, our sweetness, and our hope! To thee do we
        cry, poor banished children of Eve, to thee do we send up our sighs, mourning and weeping in this valley, of
        tears. Turn, then, most gracious advocate, thine eyes of mercy toward us; and after this our exile show unto us
        the blessed fruit of thy womb Jesus; O clement, O loving, O sweet virgin Mary. Pray for us, O holy Mother of God
        That we may be made worthy of the promises of Christ.
        \n\n\n

    </string>
    <string name="holy_mar">
        नमस्कार हे राणी\n\n

        नमस्कार हे राणी, दयेचे माते ! तू आमचे जीवन, आमचे माधुर्य आणि आमची आशा, तुला नमस्कार असो. तुझ्याकडे आम्ही देशपार
        झालेली एवेची मुले मोठ्याने आक्रोश करतो. तुझ्याकडे आम्ही या अश्रूंच्या दरीत शोक करत व रडत सुस्कारे टाकतो. तूच तर
        आमची कैवारीण आहेस, म्हणून तू आपली दयेची दृष्टी आम्हाकडे लाव आणि आमच्या या देशपारीनंतर तुझ्या उदराचे आशीर्वादित
        फळ येशू याचे आम्हाला दर्शन घडव. हे कृपाळू, हे ममताळू, हे मधुर कुमारी मरिया.\n\n
        - ख्रिस्ताने दिलेल्या वचनास आम्ही पात्र व्हावे म्हणून हे पवित्र देवमाते, आम्हासाठी विनंती कर.
    </string>
    <string name="fatima_prayer">Fatima Prayer</string>
    <string name="jesus">Oh my Jesus, forgive us of our sins. Save us from the fires of hell. Lead all
        souls into heaven, especially those in most need of thy mercy.\n


    </string>
    <string name="fatima_mar">
        हे येशू, आमच्या पापांची क्षमा कर. पापदंडापासून आमचे रक्षण कर. सर्व मनुष्यांना आणि विशेषकरून ज्यांना तुझ्या
        दयेची अधिक गरज आहे त्यांना स्वर्गाकडे ने. \n\nआमेन.
    </string>
    <string name="holy_communion">Prayers after Holy Communion</string>
    <string name="blood">What has passed our lips as food, O Lord, may we possess
        in purity of heart, that what is given to us in time, be our healing for eternity. May Your Body, O Lord, which
        I have eaten, and Your Blood which I have drunk, cleave to my very soul, and grant that no trace of sin be found
        in me, whom these pure and holy mysteries have renewed. Who live and reign, world without end. Amen. We humbly
        beseech You, almighty god, to grant that those whom You refresh with Your sacraments, may serve you worthily by
        a life well pleasing to You. Through our Lord Jesus Christ, Your Son, Who lives and reigns, world without end.
        Amen.
    </string>
    <string name="_creed">Apostles Creed</string>
    <string name="lords">lords prayer</string>
    <string name="hail">Hail Mary</string>
    <string name="queen">Hail Holy Queen</string>
    <string name="communion">Prayer after holy communion</string>
    <string name="simon">\nPeter, who was also known as Simon Peter of Cephas, is considered the first Pope. Despite his
        papacy, Peter had humble beginnings and became one of the Twelve Apostles of Jesus. He was ordained by Jesus as
        the \"Rock of My Church\" written in Matthew 16:18, which says, \"And I tell you that you are Peter,and on this
        rock I will build my church, and the gates of Hades will not overcome it.\"
        \n\n
        Peter was a native of Bethsaida, near Lake Tiberias and was the son of Jonah. He and his brother Andrew were
        fishermen on Lake Genesareth. Peter followed Jesus and his life was changed forever. Though he was one of the
        first disciples called to follow Jesus and eventually became the spokesman for the group, Peter is known for his
        \"little faith.\"
        \n\n
        Peter is often depicted in the gospels as spokesman of all the Apostles.
        In the time following Christ\'s Ascension, Peter stood as the unquestionable head of the Apostles, which the
        book of Acts clearly describes. He went on to appoint the replacement of Judas Iscariot, spoke first to the
        crowds that had assembled after the descent of the Holy Spirit at Pentecost, he was the first Apostle to perform
        miracles in the name of the Lord, and he rendered judgment upon the deceitful Ananias and Sapphira, both of whom
        were stealing from church members and God alike.
        Peter was instrumental in bringing the Gospel to the Gentiles. He baptized the Roman pagan Cornelius, and at the
        Council of Jerusalem gave his support to preach to Gentiles, thereby permitting the new Church to become
        universal.
        \n\n
        Tradition says that Peter died in A.D. 64-68 during Nero\'s persecution of the Christians. He was crucified
        upside down on a cross.
        \n\n
        Feastday June 29th.
    </string>
    <string name="andrew">\nSt. Andrew, also known as Andrew the Apostle, was an Apostle and the older brother
        to St. Peter.
        \n\n
        According to the New Testament, Andrew was born in the village of Bethsaida on the Sea of Galilee during the
        early first century. Much like his younger brother, Simon Peter, Andrew was also a fisherman. Andrew\"s very
        name means strong and he was known for having good social skills.
        \n\n
        In the Gospel of Matthew, it is said Jesus was walking along the shore of the Sea of Galilee and saw Andrew and
        Simon Peter fishing. It is then he asked the two to become disciples and \"fishers of men.\"
        \n\n
        In the Gospel of Luke, Andrew is not initially named. It describes Jesus using a boat, believed to be solely
        Simon\"s, to preach to the multitudes and catch a large amount of fish on a night that originally was dry.
        Later, in Luke 5:7, it mentions Simon was not the only fisherman on the boat, but it is not until Luke 6:14 that
        there is talk of Andrew being Simon Peter\"s brother.
        \n\n
        However, the Gospel of John tells a separate story, stating Andrew was a disciple of John the Baptist. When
        Jesus walked by one day, John the Baptist stated, \"Behold, the Lamb of God!\" It is then that Andrew and
        another made the decision to follow Jesus.
        \n\n
        Little else is said about Andrew in the Gospels, but it is believed Andrew was one of the closer disciples to
        Jesus. It was he who told Jesus about the boy with the loaves and fishes, according to John 6:8. When Philip
        wanted to speak to Jesus about Greeks seeking him, he spoke to Andrew first. Andrew was also present at the last
        supper.
        \n\n
        Per Christian tradition, Andrew went on to preach the Good News around the shores of the Black Sea and
        throughout what is now Greece and Turkey. Andrew was martyred by crucifixion in Patras. He was bound, rather
        than nailed, to a cross, as is described in the Acts of Andrew. He was crucified on a cross form known as \"crux
        decussata,\" which is an X-shaped cross or a \"saltire.\" Today this is commonly referred to as \"St. Andrew\"s
        Cross.\" It is believed Andrew requested to be crucified this way, because he deemed himself \"unworthy to be
        crucified on the same type of cross as Jesus.\"
        \n\n
        Andrew\"s remains were originally preserved at Patras. However, some believe St. Regulus, who was a monk at
        Patras, received a vision telling him to hide some of Andrew\"s bones. Shortly after Regulus\" dream, many of
        Andrew\"s relics were transferred to Constantinople by order of Roman emperor Constantius II around 357. Regulus
        later received orders in a second dream telling him to take the bones \"to the ends of the earth.\" He was to
        build a shrine for them wherever he shipwrecked. He landed on the coat of Fife, Scotland.
        \n\n
        St. Andrew is venerated in Georgia as the first preacher of Christianity in that territory and in Cyprus for
        having struck the rocks creating a gush of healing waters upon landing on the shore.
        \n\n
        His saltire cross is featured on the flag of Scotland and is represented in much of his iconography. He is
        commonly portrayed as an old man with long white hair and a beard, often holding the Gospel book or a scroll.
        \n\n
        St. Andrew is the patron saint of fishermen and singers. He is also the patron saint to several countries and
        cities including: Scotland, Romania, Russia, Ukraine and Patras.
        \n\n
        Feastday November 30.
    </string>
    <string name="apostles_1">Apostles</string>
    <string name="common_prayer">Common Prayers</string>
    <string name="angels_">Angels</string>
    <string name="pray">Pray to the guardian angel</string>
    <string name="Nicene_creed">Nicene Creed</string>
    <string name="the_mysteries_of_the_rosary">The Mysteries of the Rosary</string>
</resources>